[tool.poetry]
name = "financial-planner"
version = "0.1.0"
description = ""
authors = ["Arunabh Ghosh <arunabhghosh98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
autogen-agentchat = "^0.4.9.2"
autogen-ext = {extras = ["semantic-kernel-anthropic"], version = "^0.4.9.2"}
requests = "^2.32.3"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
uvicorn = "^0.34.0"
openai = "^1.68.2"
anthropic = "^0.49.0"
rich = "^13.9.4"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.11.2"
tiktoken = "^0.9.0"
fastapi = "^0.115.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
