[tool.poetry]
name = "financial-planner"
version = "0.1.0"
description = ""
authors = ["Arunabh Ghosh <arunabhghosh98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
autogen-agentchat = "^0.5.1"
autogen-ext = {version = "^0.5.1", extras = ["docker", "semantic-kernel-anthropic"]}
requests = "^2.32.3"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
uvicorn = "^0.34.0"
openai = "^1.68.2"
anthropic = "^0.49.0"
rich = "^13.9.4"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.11.2"
tiktoken = "^0.9.0"
fastapi = "^0.115.12"
tzdata = "^2025.2"
tzlocal = "^5.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
